# D7045E

./: .gitignore  lab5_ANN_backprop.ipynb
exts/glew/: Makefile
projects/example/: example
projects/lab1/: CMakeLists.txt  lab1
projects/lab1/code/: lab1.cc  lab1.h  main.cc
projects/lab2/: CMakeLists.txt  input.txt  lab2  martin_bug.txt
projects/lab2/bugs/: bug1.txt  bug2.txt  bug3.txt  bug_online.txt
projects/lab2/src/: TTTree.cc  TTTree.h  input.cc  input.h  lab2.cc  lab2.h  main.cc  point_line.cc  point_line.h  triangle_soup.cc  triangle_soup.h  two_three_tree.h  types.h
projects/lab3/: CMakeLists.txt  lab3
projects/lab3/src/: camera.cpp  graphic_node.cpp  lab3.cpp  main.cpp  material.h  mesh.cpp  mesh.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  simple_material.cpp  types.h  vertex.h
projects/lab3/src/include/: camera.h  graphic_node.h  lab3.h  material.h  mesh.h  shader.h  shader_program.h  simple_cube.h  simple_material.h
projects/lab3/src/resources/: graphic_node.h  mesh.h  shader.h  shader_program.h
projects/lab4/: CMakeLists.txt  lab4
projects/lab4/src/: camera.cpp  graphic_node.cpp  lab3.cpp  lab4.cpp  main.cpp  mesh.cpp  node.cpp  shader.cpp  simple_material.cpp
projects/lab4/src/include/: camera.h  graphic_node.h  lab4.h  material.h  mesh.h  node.h  shader.h  simple_cube.h  simple_material.h
